`Updated backend and frontend code with various changes`